welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: ';' expected but ')' found.
  nbBscuits = nbBiscuits + 1)
                            ^Poucet:7: error: ')' expected but 'if' found.
  if (nbBiscuits >= 3) {
  ^Poucet:10: error: ';' expected but 'else' found.
   else{
   ^